Fix overlap of stripe color component on header

--- a/src/App.css
+++ b/src/App.css
@@ -28,7 +28,6 @@ body {
 }
 
 .stripe-color {
-  position: relative; 
   background-image: linear-gradient(45deg, #808080 25%, transparent 25%), 
     linear-gradient(-45deg, #808080 25%, transparent 25%),
     linear-gradient(45deg, transparent 75%, #808080 75%),
